Image of asset disappears in the asset browser when linked #83884

Closed
opened 2020-12-17 11:42:47 +01:00 by EchoDot · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 26.20.100.7323

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: 3a1d1aaa86
Worked: (newest version of Blender that worked as expected)

Short description of error
When I create an asset, drag and drop it into the viewport and mark as linked, the image of asset in the asset browser disappears (Look at photos for more info)

Exact steps for others to reproduce the error
I took the default cube and made it into an asset.
{F9514719, size=full}
Dragged and dropped it onto the viewport.
{F9514720, size=full}
When I turned on the linked option in the add named object menu in the bottom left, the asset looses its image from the asset browser(Image does not come back even if saved and opened again or reverted) and the asset moves over to the position of the mouse which is on top of the linked check box.
{F9514718, size=full}

cube.blend
Thanks!

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 26.20.100.7323 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: `3a1d1aaa86` Worked: (newest version of Blender that worked as expected) **Short description of error** When I create an asset, drag and drop it into the viewport and mark as linked, the image of asset in the asset browser disappears (Look at photos for more info) **Exact steps for others to reproduce the error** I took the default cube and made it into an asset. {[F9514719](https://archive.blender.org/developer/F9514719/Capture.PNG), size=full} Dragged and dropped it onto the viewport. {[F9514720](https://archive.blender.org/developer/F9514720/Capture2.PNG), size=full} When I turned on the linked option in the add named object menu in the bottom left, the asset looses its image from the asset browser(Image does not come back even if saved and opened again or reverted) and the asset moves over to the position of the mouse which is on top of the linked check box. {[F9514718](https://archive.blender.org/developer/F9514718/Capture3.PNG), size=full} [cube.blend](https://archive.blender.org/developer/F9514725/cube.blend) Thanks!
Author

Added subscriber: @EchoDot

Added subscriber: @EchoDot
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

For some reason the previews get tagged as unfinished on redo (which is what changes to properties there does).

For some reason the previews get tagged as unfinished on redo (which is what changes to properties there does).
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-12-09 20:24:43 +01:00
Member

This should be fixed already with 3850fdd5b9.

Closing the report, but I'd appreciate some quick feedback if this indeed the case, just to be sure I'm not missing anything.

Thanks for the report.

This should be fixed already with 3850fdd5b9. Closing the report, but I'd appreciate some quick feedback if this indeed the case, just to be sure I'm not missing anything. Thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83884
No description provided.